--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ asgiref==3.2.10
 astroid==2.4.2
 dj-database-url==0.5.0
 Django==3.0.8
+django-cors-headers==3.4.0
 django-templated-mail==1.1.1
+django-webpack-loader==0.7.0
 djangorestframework==3.11.0
 djangorestframework-simplejwt==4.4.0
 djoser==2.0.3
